syntax = "proto3";

package lightops.type;

option csharp_namespace = "LightOps.Commerce.Proto.Types";

import "google/protobuf/timestamp.proto";
import "Protos/type/image.proto";
import "Protos/type/localized_string.proto";
import "Protos/type/money.proto";

message Product {
  // Globally unique identifier, eg: gid://Product/1000
  string id = 1;

  // Globally unique identifier of parent, 'gid://' if none
  string parent_id = 2;

  // The localized human-friendly unique handles for the product
  repeated lightops.type.LocalizedString handles = 3;

  // The localized titles of the product
  repeated lightops.type.LocalizedString titles = 4;

  // The localized urls of the product
  repeated lightops.type.LocalizedString urls = 5;

  // The type of the product
  string type = 6;

  // The localized descriptions of the product
  repeated lightops.type.LocalizedString descriptions = 7;

  // The timestamp of product creation
  google.protobuf.Timestamp created_at = 8;

  // The timestamp of the latest product update
  google.protobuf.Timestamp updated_at = 9;

  // Globally unique identifier of the primary category the product belong to
  string primary_category_id = 10;

  // Globally unique identifiers of categories the product belong to
  repeated string category_ids = 11;

  // The variants of the product
  repeated ProductVariant variants = 12;

  // The images of the product
  repeated lightops.type.Image images = 13;

  // Whether or not the product is searchable
  bool is_searchable = 14;

  // The sort order of the product when no sorting key is specified
  int64 sort_order = 15;
}

message ProductVariant {
  // Globally unique identifier, eg: gid://ProductVariant/1000
  string id = 1;

  // Globally unique identifier of the parent product
  string product_id = 2;

  // The localized titles of the product variant
  repeated lightops.type.LocalizedString titles = 3;

  // The stock keeping unit of the product variant
  string sku = 4;

  // The currency specific unit prices of the product variant
  repeated lightops.type.Money unit_prices = 5;

  // The images of the product variant
  repeated lightops.type.Image images = 6;

  // The sort order of the product variant when no sorting key is specified
  int64 sort_order = 7;
}

enum ProductSortKey {
  DEFAULT = 0;
  TITLE = 1;
  CREATED_AT = 2;
  UPDATED_AT = 3;
  UNIT_PRICE = 4;
}
